--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "ag-grid-community": "^26.2.1",
+    "ag-grid-react": "^26.2.0",
+    "d3": "^7.3.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-dropzone": "^11.5.1",
+    "react-player": "^2.9.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.8",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
